@@ -657,7 +657,7 @@ class ConfigManager(object):
             if len(chan.remapSystChanName) == 0:
                 continue
 
-            log.info("For overallSys: now setting systematics of channel <%s> to those of channel: <%s>"%(chan.name,chan.remapSystChanName))
+            log.info("For overallSys: now setting systematic(s)s of channel <%s> to those of channel: <%s>"%(chan.name,chan.remapSystChanName))
             rc = fitConfig.getChannelByName(chan.remapSystChanName)
             # loop over overallSystematics of all samples, and swap for those of remap channel
             for sam in chan.sampleList:
@@ -677,10 +677,40 @@ class ConfigManager(object):
                         log.warning("For channel %s and sample %s, replacement systematic %s could not be found. Skipping replacement of this overall syst." % (chan.name,sam.name,osys[0]))
                         continue
 
-                    log.info("For channel %s and sample %s, replacement of systematic %s from %s." % (chan.name,sam.name,osys[0],rc.name))
+                    log.info("For channel %s and sample %s, replacement of overall systematic %s from %s." % (chan.name,sam.name,osys[0],rc.name))
                     sam.replaceOverallSys(rsys)
                     pass
 
+            rc = fitConfig.getChannelByName(chan.remapSystChanName)
+            # Check that for histoSys remapping, the channels have the same binning and binWidth
+            # If they do not, then no remapping is performed
+            channelsCompatible = chan.compareChannelFormat(rc)
+            if not channelsCompatible:
+                continue
+            
+            log.info("For histoSys: now setting systematics of channel <%s> to those of channel: <%s>"%(chan.name,chan.remapSystChanName))
+            # loop over overallSystematics of all samples, and swap for those of remap channel
+            for sam in chan.sampleList:
+                if not sam.allowRemapOfSyst: continue
+                if sam.isData: continue
+                if not rc.hasSample(sam.name): continue
+
+                rs = rc.getSample(sam.name)
+
+                for (key, ssys) in sam.systDict.items():
+                    if not ssys.allowRemapOfSyst: continue
+
+                    osys = sam.getHistoSys(key) # histo sys part is to be modified
+                  
+                    rsys = rs.getHistoSys(osys[0]) # get replacement histo systematic, by name
+                    if rsys is None:
+                        log.warning("For channel %s and sample %s, replacement systematic %s could not be found. Skipping replacement of this histo syst." % (chan.name,sam.name,osys[0]))
+                        continue
+
+                    log.info("For channel %s and sample %s, replacement of histo systematic %s from %s." % (chan.name,sam.name,osys[0],rc.name))
+                    sam.replaceHistoSys(rsys)
+                    pass
+            
         #post-processing 3: merging of overall systematics (e.g. signal theory), if so requested
         for chan in fitConfig.channels:
             for sam in chan.sampleList:
